fixed alignment

--- a/src/App.css
+++ b/src/App.css
@@ -332,6 +332,10 @@ header {
     margin: 0 auto;
 }
 
+.ml {
+    margin-left: 2em;
+}
+
 @media (min-width: 800px) {
     .services {
         display: flex;
